--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,12 +3,13 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
-        "type": "node",
-        "request": "attach",
-        "name": "Attach",
-        "port": 5000
-    },
+    "configurations": [
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach",
+            "port": 5500
+        },
         {
             "type": "node",
             "request": "launch",
