--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weekend-challenge-3",
   "version": "1.0.0",
   "description": "in class version of to do list operation",
-  "main": "server/app.js",
+  "main": "/server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/app.js"
@@ -14,7 +14,7 @@
   "author": "Alex Jung",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AlexMJung/weekend-challenge-3/issues"
+   "url": "https://github.com/AlexMJung/weekend-challenge-3/issues"
   },
   "homepage": "https://github.com/AlexMJung/weekend-challenge-3#readme",
   "dependencies": {
